Instagram Clone Done

--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div class="generalDiv"> 
+
+    <div class="div1">
+      <img src="images/phones.png" alt="">
+    </div>
+
+    <div class="div2">
+      <div class="div2-top">
+        <div class="div2-top-title">
+          <div><img src="images/brand.png" alt=""></div>
+          <div class="div2-top-title-button"><button>Log In</button></div>
+        </div>
+        <div class="div2-top-logIn"></div>
+      </div>
+      <div class="div2-bot">
+        <h3>Capture and Share the World's Moments</h3>
+        <div class="div2-bot-p">
+          Instagram is a <b>fast</b>, <b>beautiful</b>  and <b>fun</b> way to share your life with
+          friends and family. 
+          <br> <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br> <br>
+          Oh yeah, did we mention it's free?
+        </div>
+        <div class="div2-bot-imgs">
+          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>  
+  </div>  
+
+  <footer class="div3">
+    <div class="div3-list">
+      <ul>ABOUT US</ul>
+      <ul>SUPPORT</ul>
+      <ul>BLOG</ul>
+      <ul>PRESS</ul>
+      <ul>API</ul>
+      <ul>JOBS</ul>
+      <ul>PRIVACY</ul>
+      <ul>TERMS</ul>
+      <ul class="div3-list-name">2014 INSTAGRAM</ul>
+    </div>
+  </footer>
   </body>
 </html>
