--- a/index.html
+++ b/index.html
@@ -3,14 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="content">
+        <div>
+          <img src="./images/phones.png" alt="">
+        </div>
+
+        <div>
+          
+          <header>
+
+            <img src="./images/brand.png" alt="">
+
+            <a href="#">
+              <button>
+                <img src="./images/home.png" alt="">
+                Log In
+              </button>
+            </a>
+
+          </header>
+
+          <section>
+            <h1>
+              Capture and Share the World's Moments
+            </h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family. <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br>Oh yeah, did we mention it's free?
+            </p>
+
+            <a href="#">
+              <button>
+                <img src="./images/badge-android.png" alt="">
+              </button>
+            </a>
+
+            <a href="#">
+              <button>
+                <img src="./images/badge-iphone.png" alt="">
+              </button>
+            </a>
+
+          </section>
+        </div>
+      </div>
+
+    <footer>
+      <ul class="list-container">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+     
   </body>
 </html>
