--- a/index.html
+++ b/index.html
@@ -5,12 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="blue-bg"></div>
+      <div class="flex-wrapper">
+        <div class="left">
+          <img src="images/phones.png" alt="phones" />
+        </div>
+
+        <div class="right">
+          <div class="right-header">
+            <img src="images/brand.png" alt="logo" class="insta-logo" />
+            <a href="#" class="right-login-btn"
+              ><img src="images/home.png" alt="home-symbol" /><span
+                >Log in</span
+              ></a
+            >
+          </div>
+          <div class="right-main">
+            <h2>
+              Capture and Share <br />
+              the World's Moments
+            </h2>
+            <p>
+              Instagram is a <span>fast</span>, <span>beautiful</span> and
+              <span>fun</span> way to share your life with friends and family.
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world. Oh yeah, did we mention it's free?
+            </p>
+            <div class="right-stores">
+              <img src="images/badge-iphone.png" alt="apple-store" />
+              <img
+                src="images/badge-android.png"
+                alt="google-store"
+                class="google-play"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <a href="#">ABOUT US</a>
+      <a href="#">SUPPORT</a>
+      <a href="#">BLOG</a>
+      <a href="#">PRESS</a>
+      <a href="#">API</a>
+      <a href="#">JOBS</a>
+      <a href="#">PRIVACY</a>
+      <a href="#">TERMS</a>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
