--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="background"></div>
+    <section id="main-section">
+      <section id="phone-image"><img src="/images/phones.png" alt="phones"></section>
+      <section id="hero">
+        <section id="header">
+          <div><img src="/images/brand.png" alt=""></div>
+            <div id="log-in">
+              <button>
+                <img src="/images/home.png" alt="">
+                <p>Log In</p>
+              </button>
+            </div>
+        </section>
+        <section id="description" >
+          <section id="decription-text">
+            <h1>Capture and Share<br> the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <section id="download-app">
+              <div>
+                <img src="/images/badge-iphone.png" alt="">
+              </div>
+              <div>
+                <img src="/images/badge-android.png" alt="">
+              </div>
+            </section>
+            </section>
+          </section>
+      </section>
+    </section>
+    <footer>
+      <p class="footer-elements">About Us</p>
+      <p class="footer-elements">Support</p>
+      <p class="footer-elements">Blog</p>
+      <p class="footer-elements">Press</p>
+      <p class="footer-elements">API</p>
+      <p class="footer-elements">Jobs</p>
+      <p class="footer-elements">Privacy</p>
+      <p class="footer-elements">Terms</p>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
+
+
+<!--    Instagram   
+     Download on the App Store Get it on Google Play     
+         -->
