--- a/index.html
+++ b/index.html
@@ -4,13 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue-background"></div>
+    <section class="main">
+      <div class="main-container">
+        <div class="phone-picture">
+          <img
+            src="./images/phones.png"
+            alt="phones"
+            class="phone-picture-img"
+          />
+        </div>
+        <div class="description">
+          <div class="description-header">
+            <img src="./images/brand.png" alt="brand" class="brand-image" />
+            <div class="log-in-btn">
+              <img src="./images/home.png" alt="home-icon" class="home-icon" />
+              <button class="desc-header-button">Log in</button>
+            </div>
+          </div>
+          <div class="description-text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="description-apps">
+            <img
+              src="./images/badge-iphone.png"
+              alt="Download on the App Store"
+            />
+            <img src="./images/badge-android.png" alt="Get it on Google Play" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <p>&copy; 2014 Instagram</p>
+      </div>
+    </footer>
   </body>
 </html>
