--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Instagram Clone</title>
+        <!-- don't forget to link your styles -->
+        <link rel="stylesheet" href="/styles/style.css" />
+    </head>
+    <body>
+        <div class="blue-background"></div>
+
+        <section>
+            <div class="main-container">
+                <div class="phones">
+                  <img src="/images/phones.png" alt="phones">
+                </div>
+                <div class="describtion">
+                    <h1>Instagram</h1>
+                    <h2>Capture and Share the World's Moments</h2>
+                    <p>
+                      Instagram is
+                      a fast, beautiful and fun way to share your life with
+                      friends and family.
+                    </p>
+                    <p>
+                      Take a picture or video, choose a filter
+                      to transform its look and feel, then post to Instagram
+                      &mdash; it's that easy. You can even share to Facebook,
+                      Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+                    <p>
+                      Oh yeah, did we mention it's free? Download on the App Store
+                      Get it on Google Play
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <footer></footer>
+
+        About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </body>
 </html>
