added app badges Images

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
               the world.
             </p>
             <p>
-              Oh yeah, did we mention it's free? Download on the App Store Get
-              it on Google Play
+              Oh yeah, did we mention it's free?
             </p>
+            <div class="app-badges">
+              <img src="/images/badge-iphone.png" alt="Download on the App Store">
+              <img src="/images/badge-android.png" alt="Get it on Google Play">
+            </div>
           </div>
         </div>
       </div>
