added styling for footer

--- a/index.html
+++ b/index.html
@@ -50,8 +50,18 @@
       </div>
     </section>
 
-    <footer></footer>
-
-    About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
