--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
     <footer>
       <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
+        <li><a href="#AboutUs">About Us</a></li>
+        <li><a href="#Support">Support</a></li>
+        <li><a href="#Blog">Blog</a></li>
+        <li><a href="#Press">Press</a></li>
+        <li><a href="#API">API</a></li>
+        <li><a href="#Jobs">Jobs</a></li>
+        <li><a href="#Privacy">Privacy</a></li>
+        <li><a href="#Terms">Terms</a></li>
       </ul>
+      <span>&copy; 2014 Instagram</span>
     </footer>
   </body>
 </html>
