--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
@@ -29,8 +39,9 @@
           <div class="description-text">
             <h1>Capture and Share the World's Moments</h1>
             <p>
-              Instagram is a fast, beautiful and fun way to share your life with
-              friends and family.
+              Instagram is a <strong>fast, beautiful</strong> and
+              <strong>fun</strong> way to share your life with friends and
+              family.
             </p>
             <p>
               Take a picture or video, choose a filter to transform its look and
@@ -51,17 +62,17 @@
       </div>
     </section>
     <footer>
-      <div>
-        <a href="#">About Us</a>
-        <a href="#">Support</a>
-        <a href="#">Blog</a>
-        <a href="#">Press</a>
-        <a href="#">API</a>
-        <a href="#">Jobs</a>
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <p>&copy; 2014 Instagram</p>
-      </div>
+      <ul class="footer-links">
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li><p>&copy; 2014 INSTAGRAM</p></li>
+      </ul>
     </footer>
   </body>
 </html>
