--- a/index.html
+++ b/index.html
@@ -4,13 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="background-gradient min-width"></section>
+    <section class="main-section min-width">
+      <div class="main-img-containter">
+        <img src="./images/phones.png" alt="Phones images">
+      </div>
+      <div class="main-section-container">
+        <div class="header-card">
+          <div class="main-logo">
+            <img src="./images/brand.png" alt="">
+          </div>
+          <div class="login-card">
+            <a href="#" type="button">
+              <img src="./images/home.png">
+              Log in
+            </a>
+          </div>
+        </div>
+        <div class="content-card">
+          <h1>Capture and Share 
+            <br>
+            the World's Moments
+          </h1>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life
+            with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+            It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="download-buttons">
+            <div class="apple-logo">
+              <img src="./images/badge-iphone.png" alt="Download App Store">
+            </div>
+            <div class="android-logo">
+              <img src="./images/badge-android.png" alt="Download Google Play">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="min-width">
+      <ul class="nav-list">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
+
+    <!-- Instagram 
+      Capture and Share the World's Moments 
+      Instagram is a fast, beautiful and fun way to share your life with
+    friends and family. 
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+    It's a new way to see the world.
+    Oh yeah, did we mention it's free? 
+    Download on the App Store 
+    Get it on Google Play 
+    About Us Support Blog Press API
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
