--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Instagram Clone</title>
         <!-- don't forget to link your styles -->
+        <!-- update from private account -->
         <link rel="stylesheet" href="/styles/style.css" />
     </head>
     <body>
