--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/Users/sebasgranara/lab-css-instagram-clone/styles/style.css"
     <!-- don't forget to link your styles -->
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <div class="header"> </div>
+
+    <div class="container-caja">
+        <div>
+        <img src="/Users/sebasgranara/lab-css-instagram-clone/images/phones.png">
+        </div>
+
+        <div>
+          <div class="container-superior">
+            <img class="logo-inst" src="/Users/sebasgranara/lab-css-instagram-clone/images/brand.png"> 
+            <div class="login-btn"> 
+              <img src="/Users/sebasgranara/lab-css-instagram-clone/images/home.png">
+              Log In
+            </div>    
+          </div>
+          <div class="container-medio">
+            <h1> Capture and Share the World's Moments </h1>
+            <p> Instagram is a fast, beautiful and fun way to share your life with
+    friends and family. </p> 
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+            <p>Oh yeah, did we mention it's free?
+            </p>
+          </div>
+          <div class="container-inferior">
+            <img src="/Users/sebasgranara/lab-css-instagram-clone/images/badge-iphone.png">
+            <img src="/Users/sebasgranara/lab-css-instagram-clone/images/badge-android.png">
+          </div>
+        </div>
+
+    </div>
+   
+  <footer class="footer">
+    <span> About Us </span>
+      <span>Support </span>
+      <span>Blog </span>
+      <span>Press </span>
+      <span> API </span>
+      <span>Jobs </span>
+      <span>Privacy </span>
+      <span>Terms </span>
+      <span>2014 Instagram </span>
+  </footer>
+</body>
+
 </html>
