--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Instagram Clone</title>
+		<link rel="stylesheet" href="styles/style.css"
+		<!-- don't forget to link your styles -->
+	</head>
+	<body>
+		<div class="overlay"></div>
+		<header>
+			<img src="images/brand.png" alt="logo" />
+			<button class="btn login"></button>
+		</header>
+		<main>
+			<div class="display">
+				<img src="images/phones.png" alt="phones" />
+			</div>
+			<div class="card">
+				<h1>Capture and share the World's Moments</h1>
+				<p>
+					Instagram Capture and Share the World's Moments Instagram is a fast,
+					beautiful and fun way to share your life with friends and family. Take
+					a picture or video, choose a filter to transform its look and feel,
+					then post to Instagram &mdash; it's that easy. You can even share to
+					Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+					Oh yeah, did we mention it's free? Download on the App Store Get it on
+					Google Play About Us Support Blog Press API Jobs Privacy Terms &copy;
+					2014 Instagram
+				</p>
+				<div class="buttonsList">
+					<a href="#"><img src="images/badge-iphone.png" alt="AppStore" /></a>
+					<a href="#"
+						><img src="images/badge-iphone.png" alt="GoogleStore"
+					/></a>
+				</div>
+			</div>
+			<div class="footer">
+				<ul>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">support</a></li>
+					<li><a href="#">blog</a></li>
+					<li><a href="#">press</a></li>
+					<li><a href="#">api</a></li>
+					<li><a href="#">jobs</a></li>
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">terms</a></li>
+				</ul>
+				<p class="copyright">2014 INSTAGRAM</p>
+			</div>
+		</main>
+	</body>
 </html>
