--- a/index.html
+++ b/index.html
@@ -6,11 +6,38 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href=".style.css">
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+      <img src="images/brand.png" alt="instagram logo">
+      <article>
+        <img src="images/home.png" alt="home icon">
+        <h2>Log in</h2>
+      </article>
+    </section>
+
+    <section>
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <em>Oh yeah, did we mention it's free?</em>  
+    
+    </section>
+
   </body>
-</html>
+
+  </html>
+
+
+
+
+
+  
+  <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+  friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+  Jobs Privacy Terms &copy; 2014 Instagram -->
+  
