--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
         &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
       <em>Oh yeah, did we mention it's free?</em>  
+
+      <article>
+        <img src="images/badge-iphone.png" alt="">
+        <img src="images/badge-android.png" alt="">
+      </article>
     
     </section>
 
