--- a/index.html
+++ b/index.html
@@ -6,11 +6,50 @@
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+  
+    <header>Instagram
+      <img src="images/brand.png" alt="instagram">
+    </header>
+ 
+    <nav>
+      <img src="images/home.png" alt="logo home">
+      log in
+
+    </nav>
+  <section>
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a fast, beautiful and fun way to share your life with
+      friends and family</p>
+    
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p> Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play</p>
+
+      <img src="images/badge-android.png" alt="android">
+      <img src="images/badge-iphone.png" alt="iphone">
+
+  <!-- </section>
+
+  <section>
+    <h2>Instagram is a fast, beautiful and fun way to share your life with
+      friends and family.</h2>
+  </section>
+
+  <section>
+    <h3></h3>
+  </section>-->
+
+   <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram-->
+  
+    <footer>About Us Support Blog Press API
+      Jobs Privacy Terms &copy; 2014 Instagram</footer>
   </body>
-</html>
+
+  </html>
