--- a/index.html
+++ b/index.html
@@ -4,32 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href=".style.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   
   <body>
 
     <section>
-      <img src="images/brand.png" alt="instagram logo">
-      <article>
-        <img src="images/home.png" alt="home icon">
-        <h2>Log in</h2>
-      </article>
+      <img src="images/phones.png" alt="phones with instagram on display">
     </section>
 
-    <section>
-      <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a fast, beautiful and fun way to share your life with
-        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <section class="main-info">
+
+      <article class="row">
+        <img src="images/brand.png" alt="instagram logo" class="insta-logo">
+        <div class="home">
+          <img src="images/home.png" alt="home icon" class="home-icon">
+          <a href="#" class="log-in">Log in</a>
+        </div>
+      </article>
+
+      <article class="white-box">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.</p> 
+        
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
         &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <em>Oh yeah, did we mention it's free?</em>  
+        <em>Oh yeah, did we mention it's free?</em>  
 
-      <article>
-        <img src="images/badge-iphone.png" alt="">
-        <img src="images/badge-android.png" alt="">
-      </article>
+        <div>
+          <img src="images/badge-iphone.png" alt="ios app download" class="shop-btn">
+          <img src="images/badge-android.png" alt="android app download" class="shop-btn">
+        </div>
     
+      </article>
+
     </section>
+
 
   </body>
 
