--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 						<h1>Capture and share the World's Moments</h1>
 						<p>
 							Instagram Capture and Share the World's Moments Instagram is a
-							fast, beautiful and fun way to share your life with friends and
+							<strong>fast</strong>,<strong>beautiful</strong> and
+							<strong>fun</strong> way to share your life with friends and
 							family.<br />
 							Take a picture or video, choose a filter to transform its look and
 							feel, then post to Instagram &mdash; it's that easy. You can even
@@ -52,9 +53,8 @@
 				<li><a href="#">jobs</a></li>
 				<li><a href="#">Privacy</a></li>
 				<li><a href="#">terms</a></li>
-				<li><p class="copyright">2014 INSTAGRAM</p>
-				</li>
+				<li><p class="copyright">2014 INSTAGRAM</p></li>
 			</ul>
-				</footer>
+		</footer>
 	</body>
 </html>
