--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   
   <body>
+    <section>
 
     <section>
-      <img src="images/phones.png" alt="phones with instagram on display">
+      <img src="images/phones.png" alt="phones with instagram on display" class="iphones">
     </section>
 
     <section class="main-info">
@@ -25,7 +26,7 @@
 
       <article class="white-box">
         <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with
+        <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span> and <span class="bold">fun</span> way to share your life with
         friends and family.</p> 
         
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
@@ -40,6 +41,23 @@
       </article>
 
     </section>
+  </section>
+
+    <section>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">© 2014 Instagram</a></li>
+        
+      </ul>
+    </section
+    >
 
 
   </body>
