--- a/index.html
+++ b/index.html
@@ -3,14 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
+	<title>Instagram Clone</title>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+	<div class="content-wrapper">
+		<div class="phone-wrapper">
+			<img src="./images/phones.png" alt="two-phones">
+		</div>
+		<div class="right-block">
+			<div class="top">
+				<div class="logo">
+					<img src="./images/brand.png" alt="ig-logo">
+				</div>
+				<div class="login">
+					<button> <img src="./images/home.png"><div class="login-text">Log In</div></button>
+				</div>
+			</div>
+			<div class="frame-container">
+				<article>
+					<h1>Capture and Share <br> the World's Moments</h1>
+					<p>Instagram is a fast, beautiful and fun way to share your life with
+						friends and family.</p>
+					<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+						&mdash; it's that easy. You can even share 
+						to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+					<p>Oh yeah, did we mention it's free?</p>
+				</article>
+			</div>
+			<div class="stores">
+				<div class="apple-container">
+					<img src="./images/badge-iphone.png" alt="iphone-badge">
+				</div>
+				<div class="android-container">
+					<img src="./images/badge-android.png" alt="android-badge">
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<ul>
+			<li><a href="#"> About Us </a></li>
+			<li><a href="#"> Support </a></li>
+			<li><a href="#"> Blog </a></li>
+			<li><a href="#"> Press </a></li>
+			<li><a href="#"> API </a></li>
+			<li><a href="#"> Jobs </a></li>
+			<li><a href="#"> Privacy </a></li>
+			<li><a href="#"> Terms </a></li>
+			<li id="copy"> &copy; 2014 Instagram </li>
+		</ul>
+	</footer>
+	</body>
 </html>
