--- a/index.html
+++ b/index.html
@@ -4,16 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div>asd</div>
-    Instagram Capture and Share the World's Moments Instagram is a fast,
-    beautiful and fun way to share your life with friends and family. Take a
-    picture or video, choose a filter to transform its look and feel, then post
-    to Instagram &mdash; it's that easy. You can even share to Facebook,
-    Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
-    mention it's free? Download on the App Store Get it on Google Play About Us
-    Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <img src="./images/phones.png" alt="iPhone" id="phone" />
+      <article class="text">
+        <div class="login">
+          <img src="./images/brand.png" alt="Instagram-Brand" id="brand" />
+          <span class="login btn">
+            <img src="./images/home.png" alt="Home Log In" id="home" />
+            <a href="LogIn">Log In</a>
+          </span>
+        </div>
+        <div class="card">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <span class="bolder">fast, beautiful</span> and
+            <span class="bolder">fun</span> way to share your life with friends
+            and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div>
+          <a href="IOs-Marketplace"
+            ><img
+              src="./images/badge-iphone.png"
+              alt="iPhone app marketplace"
+              class="btn-app"
+          /></a>
+          <a href="Android-Marketplace"
+            ><img
+              src="./images/badge-android.png"
+              alt="Android app marketplace"
+              class="btn-app"
+          /></a>
+        </div>
+      </article>
+    </section>
   </body>
+  <footer>
+    <ul>
+      <li><a href="About-Us">About Us</a></li>
+      <li><a href="Support">Support</a></li>
+      <li><a href="Blog">Blog</a></li>
+      <li><a href="Press">Press</a></li>
+      <li><a href="API">API</a></li>
+      <li><a href="Jobs">Jobs</a></li>
+      <li><a href="Privacy">Privacy</a></li>
+      <li><a href="Terms">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </html>
