--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 
     <footer>
       <ul>
-        <li class="footer-txt"><a href="#">About us</a></li>
-        <li class="footer-txt"><a href="#">Support</a></li>
-        <li class="footer-txt"><a href="#">Blog</a></li>
-        <li class="footer-txt"><a href="#">Press</a></li>
-        <li class="footer-txt"><a href="#">API</a></li>
-        <li class="footer-txt"><a href="#">Jobs</a></li>
-        <li class="footer-txt"><a href="#">Privacy</a></li>
-        <li class="footer-txt"><a href="#">Terms</a></li>
-        <li class="footer-txt2"><a href="#">© 2014 Instagram</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">© 2014 Instagram</a></li>
       
       </ul>
     </footer>
