batallando con el fondo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="frame-container">
 				<article>
 					<h1>Capture and Share <br> the World's Moments</h1>
-					<p>Instagram is a fast, beautiful and fun way to share your life with
+					<p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
 						friends and family.</p>
 					<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
 						&mdash; it's that easy. You can even share 
