--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+  <main class="bodycontainer">
+    <section class="bigcontainer">
+      <div class="phonecontainer">
+        <img src="./images/phones.png" alt="Phones">
+      </div>
+
+      <div class="contentcontainer">
+
+        <div class="instalogo">
+          <img src="./images/brand.png" alt="Instagram Logo">
+          <div class="loginbutton">
+            <img src="./images/home.png"> Log In
+          </div>
+        </div>
+
+        <div class="textcontainer">
+          <h2>Capture and Share the World's Moments</h2> 
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          <br>
+          Oh yeah, did we mention it's free?
+          </p>
+        </div>
+          <div class="logos">
+            <img src="./images/badge-iphone.png">
+            <img src="./images/badge-android.png">
+          </div>
+      </div>
+    </section>
+
+    <section>
+      <nav class="totallynotfooter">
+        <a class= "bottomlinks" href="#">About Us</a> 
+        <a class= "bottomlinks" href="#">Support</a> 
+        <a class= "bottomlinks" href="#">Blog</a> 
+        <a class= "bottomlinks" href="#">Press</a>
+        <a class= "bottomlinks" href="#">API</a>
+        <a class= "bottomlinks" href="#">Jobs</a>
+        <a class= "bottomlinks" href="#">Privacy</a>
+        <a class= "bottomlinks" href="#">Terms</a>
+        <a style="font-size: small; color: grey; font-weight: bold; text-transform: uppercase;">&copy; 2014 Instagram</a>
+        </nav>
+    </section>
+  </main>
+
+
   </body>
 </html>
