--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li><a href="#">Jobs</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
-        <li><a href="#">© 2014 Instagram</a></li>
+        <li><a href="#" class="footer-txt">© 2014 Instagram</a></li>
       
       </ul>
     </footer>
