--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <article class="text">
         <div class="login">
           <img src="./images/brand.png" alt="Instagram-Brand" id="brand" />
-          <span class="login btn">
+          <a href="LogIn" class="login btn">
             <img src="./images/home.png" alt="Home Log In" id="home" />
-            <a href="LogIn">Log In</a>
-          </span>
+            Log In
+          </a>
         </div>
         <div class="card">
           <h1>Capture and Share the World's Moments</h1>
