--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+
+      <img src="./images/phones.png" alt="Phones">
+
+      <div>
+
+        <div class="loginBar">
+          <img src="./images/brand.png" alt="Instagram Logo">
+          <button>
+            <img src="./images/home.png" alt="Home">
+            <span>Log in</span>
+          </button>
+        </div>
+
+        <div class="content">
+          <h1>Capture and Share <br> the World's Moments </br></h1>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <img class="appStore" src="./images/badge-iphone.png" alt="Download on the App Store">
+            <img class="googlePlay" src="./images/badge-android.png" alt="Get it on Google Play"></div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
+
   </body>
 </html>
