--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
   <body>
+
     <header>
       <h1>Instagram</h1>
     </header>
+
+    <section class="phones">
+      <img src="./images/phones.png" alt="mobilePhone">
+    </section>
+
+    <section class="texts">
     <nav>
       <img src="./images/brand.png" alt="instagramLogo">
-      <button>
+      <div class="logInBtn">
         <img src="./images/home.png" alt="home">
-        <p>Log in</p>
-      </button>
+        <a href="#">Log in</a>
+        
+      </div>
     </nav>
-    <section>
+
+
+    <div class="textBox"> 
     <h2>Capture and Share the World's Moments </h2>
     
     <article>
     <p>
-    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.
     </p> 
     <p>
     Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
@@ -31,23 +41,24 @@
     Oh yeah, did we mention it's free?
     </p> 
   </article>
-  <img src="./images/badge-android.png" alt="downloadAndroid">
+  <div class="downloadBtn">
   <img src="./images/badge-iphone.png" alt="downloadIphone">
+  <img src="./images/badge-android.png" alt="downloadAndroid">
+  </div>
+  </div>
 </section>
 <footer>
-
-
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
 </footer>
-<ul>
-  <li><a href="#">About Us</a></li>
-  <li><a href="#">Support</a></li>
-  <li><a href="#">Blog</a></li>
-  <li><a href="#">Press</a></li>
-  <li><a href="#">API</a></li>
-  <li><a href="#">Jobs</a></li>
-  <li><a href="#">Privacy</a></li>
-  <li><a href="#">Terms</a></li>
-  <li>&copy; 2014 Instagram</li>
-</ul>
 </body>
 </html>
