--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <img id="logoLogin" src="./images/home.png" alt="logoHome">
       <a href="#">Log in</a>
     </div>
+    </div>
+
     </nav>
 
     <header>
