--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+  <div class="global">
+    <div class="box">
+      <div class="box-1">
+        <img class="pho-pic" src="./images/phones.png" alt="phone-picture">
+      </div>
+
+      <div class="box-2">
+        <div class="box-content-1">
+          <img class="ig-lg" src="./images/brand.png" alt="instagram-logo">
+
+          <div class="log-in">
+            <img class="home-pic" src="./images/home.png" alt="home-picture">
+          <a href="">Log in</a>
+          </div>
+        </div>
+
+        <div class="box-content-2">
+          <h2>Capture and Share the World's Moments</h2>
+        <p class="parr">Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Oh yeah, did we mention it's free?</p>
+          <div class="badge">
+            <img src="./images/badge-iphone.png" alt="badge-iphone">
+            <img class="badge-and" src="./images/badge-android.png" alt="badge-android">
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
+    <footer>
+      <nav>
+        <ul><a href="#">ABOUT US</a></ul>
+        <ul><a href="#">SUPPORT</a></ul>
+        <ul><a href="#">BLOG</a></ul>
+        <ul><a href="#">PRESS</a></ul>
+        <ul><a href="#">API</a></ul>
+        <ul><a href="#">JOBS</a></ul>
+        <ul><a href="#">PRIVACY</a></ul>
+        <ul><a href="#">TERMS</a></ul>
+        <ul><a class="asd" href="#">&copy; 2014 Instagram</a></ul>
+      </nav>
+
+    </footer>
+     
   </body>
 </html>
