--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
-</html> -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <section class="main-section">
+
+    <img src="./images/phones.png" alt="phones image">
+    
+    <div id="group1">
+      <div id="icons">
+        <img src="./images/brand.png" alt="logo image">
+        <div id="login_bottom">
+          <img src="./images/home.png" alt="logo home">
+          <a href="https://www.instagram.com/">  Log In</a>
+        </div>
+      </div>
+      <article>
+        <h2>
+          Capture and Share the World's Moments 
+        </h2>
+        <p>
+          Instagram is a <span class="bold_text">fast, beautiful</span> and <span class="bold_text" >fun</span>  way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <div id="links_to_apps">
+          <img src="./images/badge-iphone.png" alt="iphone market">
+          <img src="./images/badge-android.png" alt="android market">
+        
+        </div>
+      </article>
+    </div>
+
+  </section>
+  
+  <div class="links">
+    <ul>
+      <li><a href="#">about us</a></li>
+      <li><a href="#">support</a></li>
+      <li><a href="#">blog</a></li>
+      <li><a href="#">press</a></li>
+      <li><a href="#">api</a></li>
+      <li><a href="#">jobs</a></li>
+      <li><a href="#">privacy</a></li>
+      <li><a href="#">terms</a></li>
+      <li><a id="instagram_copy" href="#">&copy; 2014 Instagram</a></li>
+    </ul>
+  </div>
+
+</body>
+
+</html>
