Actualizados botones de descarga de app

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     </p> 
   </article>
   <div class="downloadBtn">
-  <img src="./images/badge-iphone.png" alt="downloadIphone">
-  <img src="./images/badge-android.png" alt="downloadAndroid">
+    <a href="#"><img src="./images/badge-iphone.png" alt="downloadIphone">
+    </a>
+    <a href="#"><img src="./images/badge-android.png" alt="downloadAndroid">
+    </a>
   </div>
   </div>
 </section>
