--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div id = "blue-background">   
+    </div>
+
+    <div id = "rest">
+    <div id = "parte-fotos">
+      <img src="images/phones.png" alt="Phone imagen">
+    </div>
+
+    <div id = "parte-cabecero">
+      <div class= header>
+      <img src="images/brand.png" alt="Instagram Logo">
+      <button id = "button">
+        <img id = "imagen-home" src="images/home.png" alt="home"> log in </button>
+      </div>
+
+    <div id = "capture-share">
+      <h1> Capture and Share the World's Moments </h1>
+        <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <br><br> take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br><br> Oh yeah, did we mention it´s free?</p>
+        <img id = "apple-store" src="images/badge-iphone.png" alt="download apple">
+        <img id = "google-store" src="images/badge-android.png" alt="download android">
+      </div>
+      </div>
+
+      </div>
+
+    <div id = "footer">
+     <footer class = "footer">
+         <ul>
+           <li> <a href="#"> About Us </a> </li>
+           <li> <a href="#"> Support </a> </li>
+           <li> <a href="#"> Blog </a> </li>
+           <li> <a href="#"> Press </a> </li>
+           <li> <a href="#"> API </a> </li>
+           <li> <a href="#"> Jobs </a> </li>
+           <li> <a href="#"> Privacy </a> </li>
+           <li> <a href="#"> Terms </a> </li>
+           <li> <p> &copy; 2014 Instagram</p> </li>
+         </ul>
+      </footer>
+    </div>
   </body>
 </html>
